--- a/app/views/organization/addressTreeview.html
+++ b/app/views/organization/addressTreeview.html
@@ -78,13 +78,13 @@
         <div class="modal-header silver">
           <h3 class="bolder">Edit Country</h3>
         </div>
-	<form name="editcountryform" novalidate="" class="" ng-submit="submit(formData.entityCode,formData.entityName)">
+	<form name="editcountryform" novalidate="" class="" ng-submit="submit(entity.code,entity.name)">
         <div class="modal-body">
  		  <fieldset>
            	<div class="control-group">
 				<label class="control-label" for="entityCode">Enter New Country Code<span class="required">*</span> :</label>
 			 	<div class="controls">
-              		<input  type="text" name="countryCode" ng-model="formData.entityCode" placeholder="enter code here" value={{nodeCode}} required late-Validate/><br>
+              		<input  type="text" name="countryCode" ng-model="entity.code" placeholder="enter code here" required late-Validate/><br>
 					<span  ng-show="editcountryform.countryCode.$invalid">
                     	<small class="error" ng-show="editcountryform.countryCode.$error.req">
                         	Required Field
@@ -95,7 +95,7 @@
           	<div class="control-group">
             	 <label class="control-label" for="entityName">Enter New Country Name<span class="required">*</span> :</label>
 			 	 <div class="controls">
-              		<input  type="text" name="countryName" ng-model="formData.entityName" placeholder="enter name here" value={{nodeName}} required late-Validate/><br>
+              		<input  type="text" name="countryName" ng-model="entity.name" placeholder="enter name here" required late-Validate/><br>
 					<span  ng-show="editcountryform.countryName.$invalid">
                     	<small class="error" ng-show="editcountryform.countryName.$error.req">
                         	Required Field
@@ -107,7 +107,7 @@
         </div>
         <div class="modal-footer">
           <button id="cancel" class="btn btn-warning" ng-click="cancel()">{{'button.cancel' | translate}}</button>
-     	  <button id="submit" class="btn btn-primary">{{'label.confirm' | translate}}</button>
+     	  <button id="submit" class="btn btn-primary" ng-disabled="!editcountryform.$valid">{{'label.confirm' | translate}}</button>
         </div>
 	</form>
     </script>
@@ -172,13 +172,13 @@
         <div class="modal-header silver">
           <h3 class="bolder">Edit State</h3>
         </div>
-	<form name="editstateform" novalidate="" class="form-horizontal well" ng-submit="submit(formData.entityCode,formData.entityName)">
+	<form name="editstateform" novalidate="" class="form-horizontal well" ng-submit="submit(entity.code,entity.name)">
         <div class="modal-body">
  		  <fieldset>
            	<div class="control-group">
 				<label class="control-label" for="entityCode">Enter New State Code<span class="required">*</span> :</label>
 			 	<div class="controls">
-              		<input  type="text" name="stateCode" ng-model="formData.entityCode" placeholder="enter code here" value={{nodeCode}} required late-Validate/><br>
+              		<input  type="text" name="stateCode" ng-model="entity.code" placeholder="enter code here" required late-Validate/><br>
 					<span  ng-show="editstateform.stateCode.$invalid">
                     	<small class="error" ng-show="editstateform.stateCode.$error.req">
                         	Required Field
@@ -189,7 +189,7 @@
           	<div class="control-group">
             	 <label class="control-label" for="entityName">Enter New State Name<span class="required">*</span> :</label>
 			 	 <div class="controls">
-              		<input  type="text" name="stateName" ng-model="formData.entityName" placeholder="enter name here" value={{nodeName}} required late-Validate/><br>
+              		<input  type="text" name="stateName" ng-model="entity.name" placeholder="enter name here" required late-Validate/><br>
 					<span  ng-show="editstateform.stateName.$invalid">
                     	<small class="error" ng-show="editstateform.stateName.$error.req">
                         	Required Field
@@ -201,7 +201,7 @@
         </div>
         <div class="modal-footer">
           <button id="cancel" class="btn btn-warning" ng-click="cancel()">{{'button.cancel' | translate}}</button>
-     	  <button id="submit" class="btn btn-primary" >{{'label.confirm' | translate}}</button>
+     	  <button id="submit" class="btn btn-primary" ng-disabled="!editstateform.$valid">{{'label.confirm' | translate}}</button>
         </div>
 	</form>
     </script>
@@ -265,13 +265,13 @@
         <div class="modal-header silver">
           <h3 class="bolder">Edit City</h3>
         </div>
-	<form name="editcityform" novalidate="" class="form-horizontal well" ng-submit="submit(formData.entityCode,formData.entityName)">
+	<form name="editcityform" novalidate="" class="form-horizontal well" ng-submit="submit(entity.code,entity.name)">
         <div class="modal-body">
  		  <fieldset>
            	<div class="control-group">
-				<label class="control-label" for="entityCode">Enter New City Code<span class="required">*</span> :</label>
+				<label class="control-label">Enter New City Code<span class="required">*</span> :</label>
 			 	<div class="controls">
-              		<input  type="text" name="cityCode" ng-model="formData.entityCode" placeholder="enter code here" value={{nodeCode}} required late-Validate/><br>
+              		<input  type="text" name="cityCode" ng-model="entity.code" placeholder="enter code here" required late-Validate/><br>
 					<span  ng-show="editcityform.cityCode.$invalid">
                     	<small class="error" ng-show="editcityform.cityCode.$error.req">
                         	Required Field
@@ -280,9 +280,9 @@
             	</div>
            	</div>
           	<div class="control-group">
-            	 <label class="control-label" for="entityName">Enter New City Name<span class="required">*</span> :</label>
+            	 <label class="control-label" >Enter New City Name<span class="required">*</span> :</label>
 			 	 <div class="controls">
-              		<input  type="text" name="cityName" ng-model="formData.entityName" placeholder="enter name here" value={{nodeName}} required late-Validate/><br>
+              		<input  type="text" name="cityName" ng-model="entity.name" placeholder="enter name here" required late-Validate/><br>
 					<span  ng-show="editcityform.cityName.$invalid">
                     	<small class="error" ng-show="editcityform.cityName.$error.req">
                         	Required Field
@@ -294,7 +294,7 @@
         </div>
         <div class="modal-footer">
           <button id="cancel" class="btn btn-warning" ng-click="cancel()">{{'button.cancel' | translate}}</button>
-     	  <button id="submit" class="btn btn-primary" >{{'label.confirm' | translate}}</button>
+     	  <button id="submit" class="btn btn-primary" ng-disabled="!editcityform.$valid">{{'label.confirm' | translate}}</button>
         </div>
 	</form>
     </script>
