--- a/app/views/system/editServiceMapping.html
+++ b/app/views/system/editServiceMapping.html
@@ -2,7 +2,7 @@
       <div>
         <ul class="breadcrumb">
           <li><a href="#/system">{{'link.admin.system' | translate}}</a> <span class="divider">/</span></li>
-          <li><a href="#/mappingconfig">{{'label.manageservicemapping' | translate}}</a> <span class="divider">/</span></li>
+          <li><a href="#/mappingconfig">{{'label.serviceMapping' | translate}}</a> <span class="divider">/</span></li>
           <li class="active">{{'label.edithardwareplanmapping' | translate}}</li>
         </ul>
       </div>
