--- a/app/views/organization/createservice.html
+++ b/app/views/organization/createservice.html
@@ -1,3 +1,4 @@
+     
      <div>
         <ul class="breadcrumb">
           <li><a href="#/organization">{{'link.admin.organisation' | translate}}</a> <span class="divider">/</span></li>
@@ -5,7 +6,7 @@
           <li class="active">{{'label.createservice' | translate}}</li>
          </ul>
       </div>
-      <form class="form-horizontal well" ng-controller="CreateServiceController" ng-submit="submit()">
+      <form name="CreateServiceForm" novalidate="" class="form-horizontal well" ng-controller="CreateServiceController" rc-submit="submit()">
        <div class="error" ng-show="errorStatus || errorDetails">
 		<label>{{'label.contract.error' | translate}}</label>
 		<label ng-show="errorStatus">{{errorStatus}}</label>
@@ -19,7 +20,8 @@
                 <div class="control-group">
                   <label class="control-label" for="serviceCode">{{ 'label.service.Service Code' | translate }}</label>
                   <div class="controls">
-                    <input type="text" ng-model="formData.serviceCode">
+                    <input type="text" name="serviceCode" ng-model="formData.serviceCode"  ng-maxlength="10" />
+                    <form-validate formName="CreateServiceForm"  fieldName="serviceCode" maxLenMsg="10 characters"/> 
                   </div>
                 </div>
               </td>
@@ -39,7 +41,7 @@
              <div class="control-group">
                   <label class="control-label" for="serviceType">{{ 'label.service.Service Type' | translate }}</label>
                   <div class="controls">
-                    <select ng-model="formData.serviceType"  ng-options="serviceTypes.value as serviceTypes.value for serviceTypes in services" value="{{serviceTypes.value}}"></select>
+                    <select ng-model="formData.serviceType"  ng-options="serviceTypes.value as serviceTypes.value for serviceTypes in services" value="{{serviceTypes.value}}" ></select>
                   </div>
                 </div>
                 </td>
@@ -49,7 +51,7 @@
              <div class="control-group">
                   <label class="control-label" for="status">{{ 'label.service.Status' | translate }}</label>
                   <div class="controls">
-                    <select ng-model="formData.status"  ng-options="status.value as status.value for status in statuses" value="{{status.value}}"></select>
+                    <select ng-model="formData.status"  ng-options="status.value as status.value for status in statuses" value="{{status.value}}" ></select>
                   </div>
                 </div>
                 </td>
