--- a/app/views/reports/run_reports.html
+++ b/app/views/reports/run_reports.html
@@ -1,6 +1,6 @@
 <div class="paddedbottom10">
     <ul class="breadcrumb">
-        <li><a href="#/reports">{{'label.anchor.reports' | translate}}</a> <span class="divider">/</span></li>
+        <li><a href="#/reports/all">{{'label.anchor.reports' | translate}}</a> <span class="divider">/</span></li>
         <li class="active">{{'label.anchor.runreport' | translate}}</li>
     </ul>
 </div>
