--- a/app/views/system/schedulerjobs.html
+++ b/app/views/system/schedulerjobs.html
@@ -50,7 +50,7 @@
                 <td class="pointer" data-ng-click="routeTo(job.jobId)">{{job.lastRunHistory.jobRunStartTime| DateFormat}}</td>
                 <td class="pointer" data-ng-click="routeTo(job.jobId)">{{job.currentlyRunning}}</td>
 		<td><a href="#/editschedulerjob/{{job.jobId}}" style='color:#000000' popover="Edit" popover-trigger="mouseenter" ><i class="icon-edit"></i></a></td>
-          		<td><a  ng-hide="job.displayName == 'Requestor' || job.displayName =='Responser'" href="#/editjobparameters/{{job.jobId}}" style='color:#000000' popover="Edit Job Parameter" popover-trigger="mouseenter"><i class="icon-edit"></i></a></td>
+          		<td><a  ng-hide="job.displayName == 'Requestor' || job.displayName =='Responser'" href="#/editjobparameters/{{job.jobId}}" style='color:#000000' popover="Edit Job Parameter" popover-trigger="mouseenter"><i class="icon-wrench"></i></a></td>
           		<td><a href="#/viewhistory/{{job.jobId}}" style='color:#3104B4' popover="View History" popover-trigger="mouseenter"><i class="icon-search"></a></td>
             </tr>
         </tbody>
