--- a/app/views/clients/creditDistribution.html
+++ b/app/views/clients/creditDistribution.html
@@ -83,15 +83,17 @@
               	    <th>Payment Date</th>
                     <th>Receipt No</th>
                 	<th>Payment Amount</th>
+                	<th>Available Amount</th>
             	</tr>
        		</thead>
         	<tbody>
             	 <tr ng-repeat="paymentData in paymentDatas">
-            		<td> <input  type="radio" name ="select"  ng-click = "seletedPayment(paymentData.id,paymentData.amountPaid)"/></td>
+            		<td> <input  type="radio" name ="select" ng-click = "seletedPayment(paymentData.id,paymentData.amountPaid,paymentData.availAmount,$index)"/></td>
             		<td>{{paymentData.id}}</td>
                 	<td>{{paymentData.paymentDate | DateFormat}}</td>
                 	<td>{{paymentData.receiptNo}}</td>
                 	<td>{{paymentData.amountPaid}}</td>
+                    <td>{{paymentData.availAmount}}</td>
              	</tr>
         	</tbody>
 		</table>
@@ -122,7 +124,7 @@
         	<tbody>
             	 <tr ng-repeat="invoiceData in invoiceDatas" >
            
-            		<td> <input type="checkbox" ng-model="active" ng-click="selectedInvoices(invoiceData.id,invoiceData.dueAmount,active)"></td>
+            		<td> <input type="checkbox" ng-model="active" ng-click="selectedInvoices(invoiceData.id,invoiceData.dueAmount,active,$index)"></td>
             		<td>{{invoiceData.id}}</td>
                 	<td>{{invoiceData.billDate | DateFormat}}</td>
                 	<td>{{invoiceData.amount}}</td>
@@ -144,7 +146,7 @@
                         <h3 class="bolder">Warning</h3>
                     </div>
                     <div class="modal-body" modal-middle>
-                       <i class="icon-warning-sign error"></i>Payment Amount alredy filled with Invoices amount.
+                       <i class="icon-warning-sign error"></i>Available amount is zero.
                     </div>
                     <div class="modal-footer">
 						<button class="btn btn-primary" ng-click="approve()">ok</button>
